# TrackMouseCursor

./: CMakeLists.txt  README.md  main.cpp
headers/: Console.h  CursorMover.h  ExceptionHandler.h  IObserver.h  Logger.h
src/: Console.cpp  CursorMover.cpp  ExceptionHandler.cpp  Logger.cpp
